<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_expert" android:layout_width="match_parent"
	android:layout_height="wrap_content" android:shrinkColumns="1"
	android:stretchColumns="*" android:padding="5dp" android:background="@color/white">
	<!-- 设置所有列均可伸展，但只有内容列可收缩 -->
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_first"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_first"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_second"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_second"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_third"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_third"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_fourth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_fourth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_fifth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_fifth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_sixth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_sixth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_seventh"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_seventh"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_eighth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_eighth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_ninth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_ninth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_tenth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_tenth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/expert_ten_first"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/expert_ten_first"
			style="@style/style_chm_info"></TextView>
	</TableRow>

</TableLayout>    
