<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_prop_identity" android:layout_width="match_parent"
	android:layout_height="wrap_content" android:shrinkColumns="1"
	android:stretchColumns="*" android:padding="5dp" android:background="@color/white">
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_first"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_first"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_second"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_second"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_third"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_third"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_fourth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_fourth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_fifth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_fifth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_sixth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_sixth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_seventh"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_seventh"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_eighth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_eighth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_ninth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_ninth"
			style="@style/style_chm_info"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:padding="2dp"
		android:layout_width="match_parent" android:layout_marginTop="5dp">
		<TextView android:id="@+id/TextView01" android:text="@string/prop_identity_tenth"
			style="@style/style_chm_info"></TextView>
		<TextView android:text="" android:id="@+id/prop_identity_tenth"
			style="@style/style_chm_info"></TextView>
	</TableRow>

</TableLayout>    
